# jax-spatial

./: README.md  pyproject.toml
src/jax_spatial/: index.py
